--- a/_posts/2023-07-16-RDFLab.md
+++ b/_posts/2023-07-16-RDFLab.md
@@ -2,7 +2,7 @@
 title: RDF Lab @ FIU
 date: 2023-07-16 07:02:00 -0500
 categories: [Projects, FIU]
-tags: [robotics,coding,collaborative-robots]     # TAG names should always be lowercase
+tags: [robotics]     # TAG names should always be lowercase
 img_path: /imgs
 ---
 # Overview
