updated xarm and rdf grammar

--- a/_posts/2023-07-16-RDFLab.md
+++ b/_posts/2023-07-16-RDFLab.md
@@ -9,13 +9,13 @@ img_path: /imgs
 I did a 6-week summer inernship at the Robotics & Digital Fabrication (RDF) Lab at FIU. I worked on a few projects, all concerning the use of collaborative (xArm) & industrial (Kuka) robots. Below is info regarding each of the projects I worked on and my contributions:
 
 - xArm Typewriter
-- KUKA - 3D Printing Sandwich Structures
-- Research on Emerging Technologies for Teaching and Learning (RETTL)
+- KUKA - 3D Printing Sandwich Structure {::comment}(Published Co-Author, AHFE 2023){:/comment}
+- Research on Emerging Technologies for Teaching and Learning (RETTL, NSF-Sponsored)
 - Flexible Gripper
 - 3D Printing w/ Prusa (Hobby items)
 
 # Schedule & Daily activies in the Lab:
-I went for 5-weeks from 10am - 6pm plus a few extra days. I spent a majority of my time on a laptop 3D-Modeling in Rhino3D. I used GitHub and documented the 3D-Modeling & Printing process for use with Prusa Printers, PrusaSlicer, Rhino, and Grasshopper. I spent a little bit of time organizng the laboratory, mainly sorting electronic componenets. I got use a few microcontrollers as well (Arduino & Adafruit Feather ESP32) and learned to solder and utilize stepper-motors. 
+I went for 5 weeks from 10am - 6pm Monday - Friday plus a few extra days. I spent a large amount of my time on a laptop 3D-Modeling in Rhino3D. I used GitHub and documented the 3D-Modeling & Printing process for use with Prusa Printers, PrusaSlicer, Rhino, and Grasshopper. I spent a little bit of time organizng the laboratory, mainly sorting electronic componenets. I got use a few microcontrollers as well (Arduino & Adafruit Feather ESP32) and learned to solder and utilize stepper-motors. 
 
 # Softwares & Programs Used
 - Rhinoceros 3D
