--- a/_posts/2023-07-16-RDFLab.md
+++ b/_posts/2023-07-16-RDFLab.md
@@ -2,9 +2,10 @@
 title: RDF Lab @ FIU
 date: 2023-07-16 07:02:00 -0500
 categories: [Projects, FIU]
-tags: [robotics]     # TAG names should always be lowercase
+tags: [robotics]     # TAG names should always be 
 img_path: /imgs
 ---
+
 # Overview
 I did a 6-week summer inernship at the Robotics & Digital Fabrication (RDF) Lab at FIU. I worked on a few projects, all concerning the use of collaborative (xArm) & industrial (Kuka) robots. Below is info regarding each of the projects I worked on and my contributions:
 
@@ -14,14 +15,15 @@ I did a 6-week summer inernship at the Robotics & Digital Fabrication (RDF) Lab 
 - Flexible Gripper
 - 3D Printing w/ Prusa (Hobby items)
 
-# Schedule & Daily activies in the Lab:
-I went for 5 weeks from 10am - 6pm Monday - Friday plus a few extra days. I spent a large amount of my time on a laptop 3D-Modeling in Rhino3D. I used GitHub and documented the 3D-Modeling & Printing process for use with Prusa Printers, PrusaSlicer, Rhino, and Grasshopper. I spent a little bit of time organizng the laboratory, mainly sorting electronic componenets. I got use a few microcontrollers as well (Arduino & Adafruit Feather ESP32) and learned to solder and utilize stepper-motors. 
+# Schedule & Daily Activities in the Lab:
+I went for 5 weeks from 10am - 6pm Monday - Friday plus a few extra days. I spent a large amount of my time on a laptop 3D-Modeling in Rhino3D. I used GitHub and documented the 3D-Modeling & Printing process for use with Prusa Printers, PrusaSlicer, Rhino, and Grasshopper. I spent a little bit of time organizng the laboratory, mainly sorting electronic componenets. I got the opportunity to use a few microcontrollers as well (Arduino & Adafruit Feather ESP32) and learned to solder. 
 
-# Softwares & Programs Used
+# Software & Languages Used
 - Rhinoceros 3D
 - Grasshopper
 - Java
-- Processing (processing.org java add-on)
+- Processing (processing.org, Java add-on)
 - xArm software (placeholder)
 - GitHub
+- Prusa Slicer
 
